# auxm_starter

./: .env  Cargo.toml
src/: main.rs
