[package]
name = "axum_starter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
axum = "0.7.5"
tower-http = { version = "0.5.2" ,features = ["trace"]}
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
